--- a/c#/finder/Finder/Views/MainWindow.xaml
+++ b/c#/finder/Finder/Views/MainWindow.xaml
@@ -16,6 +16,31 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Label Grid.Row="1" Content="{Binding recruitLabel, Mode=OneWay}"></Label>
+                    <ItemsControl Grid.Row="0"  Name="icTodoList">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="70"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Column="0" Text="{Binding Name}" Margin="10,5,5,5" HorizontalAlignment="Center"/>
+                                    <ItemsControl Grid.Column="1" Name="hi" ItemsSource="{Binding Contexts}">
+                                        <ItemsControl.ItemsPanel>
+                                            <ItemsPanelTemplate>
+                                                <WrapPanel/>
+                                            </ItemsPanelTemplate>
+                                        </ItemsControl.ItemsPanel>
+                                        <ItemsControl.ItemTemplate>
+                                            <DataTemplate>
+                                                <Button Content="{Binding}" Margin="0,5,5,5" />
+                                            </DataTemplate>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
+                                </Grid>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
                 </Grid>
             </TabItem>
             <TabItem Header="TabItem">
