--- a/c#/finder/Finder/Views/MainWindow.xaml
+++ b/c#/finder/Finder/Views/MainWindow.xaml
@@ -75,7 +75,7 @@
                                         </ItemsControl.ItemsPanel>
                                         <ItemsControl.ItemTemplate>
                                             <DataTemplate>
-                                                <Button Name="button" Content="{Binding}" Style="{StaticResource button1}" Command="{Binding ElementName=icTodoList,Path=DataContext.RecruitConditionCommand}" CommandParameter="{Binding ElementName=button}" Click="button_Click"/>
+                                                <Button Name="button" Content="{Binding}" Style="{StaticResource button1}" Command="{Binding ElementName=icTodoList,Path=DataContext.RecruitConditionCommand}" CommandParameter="{Binding ElementName=button}"/>
                                             </DataTemplate>
                                         </ItemsControl.ItemTemplate>
                                     </ItemsControl>
